--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "dualshock-controller": "^0.6.9",
+    "lodash": "^3.10.1",
     "rolling-spider": "^1.5.2"
   },
   "devDependencies": {},
